# Mandelbrot-SIMD-Parallel

./: CMakeLists.txt  README.md
src/: render.cpp  render.hpp
